@@ -589,6 +589,8 @@ typedef [uuid(D09B9F0E-C1AE-40dd-84D6-B1F74053AA8E)]
 		[propput, id(582), helpstring("property TableRegionUpdates")] HRESULT TableRegionUpdates([in] int newVal);
 		[propget, id(583), helpstring("property TableRegionOptimization")] HRESULT TableRegionOptimization([out, retval] int *pVal);
 		[propput, id(583), helpstring("property TableRegionOptimization")] HRESULT TableRegionOptimization([in] int newVal);
+		[propget, id(585), helpstring("property TableAdaptiveVSync")] HRESULT TableAdaptiveVSync([out, retval] int *pVal);
+		[propput, id(585), helpstring("property TableAdaptiveVSync")] HRESULT TableAdaptiveVSync([in] int newVal);
 		[propget, id(1700), helpstring("property BallReflection")] HRESULT BallReflection([out, retval] int *pVal);
 		[propput, id(1700), helpstring("property BallReflection")] HRESULT BallReflection([in] int newVal);
 		[propget, id(1701), helpstring("property ReflectionStength")] HRESULT ReflectionStrength([out, retval] int *pVal);
