@@ -1219,7 +1219,7 @@ BEGIN
     LTEXT           "&Sound:",IDC_STATIC,6,35,22,8
 END
 
-IDD_PROPTABLE_VISUALS DIALOGEX 0, 0, 125, 169
+IDD_PROPTABLE_VISUALS DIALOGEX 0, 0, 125, 185
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1232,14 +1232,16 @@ BEGIN
     EDITTEXT        IDC_REGION_OPT_TABLE,101,83,20,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_TABLESOUNDVOLUME,101,97,20,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_TABLEMUSICVOLUME,101,111,20,12,ES_AUTOHSCROLL
-    CONTROL         "",IDC_ALPHA_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,9,135,107,25
+    EDITTEXT        IDC_TABLEAVSYNC,101,125,20,12,ES_AUTOHSCROLL
+    CONTROL         "",IDC_ALPHA_SLIDER,"msctls_trackbar32",TBS_AUTOTICKS | TBS_TOP | WS_TABSTOP,9,149,107,25
     LTEXT           "Region Upd.    (-1=default)",IDC_STATIC,7,71,94,8
     LTEXT           "I&mage:",IDC_STATIC,7,23,22,8
     LTEXT           "&Color",IDC_STATIC,7,10,20,9
     LTEXT           "Region Opt.     (0=off, 1=on)",IDC_STATIC,7,85,94,8
     LTEXT           "Table Sound Volume (0..100)",IDC_STATIC,7,99,94,8
     LTEXT           "Table Music Volume (0..100)",IDC_STATIC,7,113,94,8
-    GROUPBOX        "Alpha Ramp Accuracy",IDC_STATIC,7,125,114,39
+    LTEXT           "Adaptive VSync (-1=default)",IDC_STATIC,7,127,94,8
+    GROUPBOX        "Alpha Ramp Accuracy",IDC_STATIC,7,139,114,39
 END
 
 IDD_PROPTABLE_EDITOR DIALOGEX 0, 0, 125, 38
